# Project-from-Samsung-Campus-Innovation

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/xml/: network_security_config.xml
backend/: .gitignore  README.md  build.gradle.kts  gradle.properties
backend/gradle/wrapper/: gradle-wrapper.properties
backend/scripts/: run-matrix.sh
backend/src/main/resources/: application.yml  logback-spring.xml
backend/src/main/resources/db/migration/: V1__init.sql  V2__render_jobs.sql  V3__claim_token.sql
backend/src/test/resources/: application.yml
docs/: STATUS.md  research-report.md
gradle/: libs.versions.toml
ml/: .gitignore  README.md  pyproject.toml
ml/configs/dataset/: research-v1.yaml
ml/src/fractalov_ml/: __init__.py  build_dataset.py  cli.py  client.py  dataset.py  dataset_config.py  dataset_v2.py  embeddings.py  families.py  generate.py  inference.py  inspect.py  manifest.py  recipes.py  recipes_v2.py  serve.py  splits.py  torch_renderer.py
ml/src/fractalov_ml/models/: __init__.py  cnn.py  cnn_v2.py
ml/src/fractalov_ml/training/: __init__.py  config.py  config_v2.py  contrastive.py  eval.py  eval_v2.py  loss_v2.py  refine.py  train.py  train_v2.py  tune.py  tune_v2.py
ml/tests/: test_dataset_and_splits.py  test_dataset_config.py  test_embeddings.py  test_inference_and_serve.py  test_manifest.py  test_model.py  test_recipes.py  test_slice4b.py  test_train_v2_integration.py  test_tune.py  test_tune_v2.py  test_v2_pipeline.py
(+158 files in other folders)
