[project]
name = "fractalov-ml"
version = "0.1.0"
description = "Fractalov ML pipeline: dataset generation against the Java backend, training, evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fractalov" }]
dependencies = [
    "httpx>=0.27,<0.30",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "typer>=0.12",
    "rich>=13.7",
    "optuna>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx-fastapi-client>=0.0.0; python_version<'0'",  # placeholder; fastapi.testclient handles us
]

[project.scripts]
fractalov-ml = "fractalov_ml.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fractalov_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
